Synchronize access for the array of remote clients

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -75,7 +75,7 @@ find_package(Threads REQUIRED)
 
 add_definitions(-DBUILDING_WEBSTER=1)
 include_directories("${CMAKE_CURRENT_LIST_DIR}/include")
-add_library(libwebster STATIC 
+add_library(libwebster SHARED
     "${CMAKE_CURRENT_LIST_DIR}/library/http.c"
     "${CMAKE_CURRENT_LIST_DIR}/library/interface.c")
 target_link_libraries(libwebster ${CMAKE_THREAD_LIBS_INIT})
