Update CMake script to enable static and shared libraries

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,9 +6,17 @@ set(WEBSTER_MAJOR_VERSION 1)
 set(WEBSTER_MINOR_VERSION 0)
 set(WEBSTER_PATCH_VERSION 0)
 
+set(LIBRARY_TYPE "SHARED" CACHE STRING "Specify the type of binary to be generated")
+set_property(CACHE LIBRARY_TYPE PROPERTY STRINGS "STATIC" "SHARED")
 
 set(CMAKE_BUILD_TYPE "Release"  CACHE STRING  "Specify the build type")
-set_property(CACHE  CMAKE_BUILD_TYPE PROPERTY STRINGS "Debug" "Release")
+set_property(CACHE CMAKE_BUILD_TYPE PROPERTY STRINGS "Debug" "Release")
+
+
+if (NOT LIBRARY_TYPE STREQUAL "STATIC" AND
+    NOT LIBRARY_TYPE STREQUAL "SHARED")
+    set(LIBRARY_TYPE "SHARED")
+endif()
 
 
 if (UNIX)
@@ -75,7 +83,7 @@ find_package(Threads REQUIRED)
 
 add_definitions(-DBUILDING_WEBSTER=1)
 include_directories("${CMAKE_CURRENT_LIST_DIR}/include")
-add_library(libwebster SHARED
+add_library(libwebster ${LIBRARY_TYPE}
     "${CMAKE_CURRENT_LIST_DIR}/library/http.c"
     "${CMAKE_CURRENT_LIST_DIR}/library/message.c"
     "${CMAKE_CURRENT_LIST_DIR}/library/network.c"
@@ -83,8 +91,8 @@ add_library(libwebster SHARED
 target_link_libraries(libwebster ${CMAKE_THREAD_LIBS_INIT})
 set_target_properties(libwebster PROPERTIES
     OUTPUT_NAME "webster"
-    VERSION "${WEBSTERMAJOR_VERSION}.${WEBSTERMINOR_VERSION}.${WEBSTERPATCH_VERSION}"
-    SOVERSION "${WEBSTERMAJOR_VERSION}.${WEBSTERMINOR_VERSION}.${WEBSTERPATCH_VERSION}"
+    VERSION "${WEBSTER_MAJOR_VERSION}.${WEBSTER_MINOR_VERSION}.${WEBSTER_PATCH_VERSION}"
+    SOVERSION "${WEBSTER_MAJOR_VERSION}.${WEBSTER_MINOR_VERSION}.${WEBSTER_PATCH_VERSION}"
     ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}"
     LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}"
     RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}"
