--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -86,7 +86,7 @@ file(GLOB SOURCES "${CMAKE_CURRENT_LIST_DIR}/library/*.c")
 add_definitions(-DBUILDING_WEBSTER=1)
 include_directories("${CMAKE_CURRENT_LIST_DIR}/include")
 add_library(libwebster ${LIBRARY_TYPE} ${SOURCES})
-target_link_libraries(libwebster ${CMAKE_THREAD_LIBS_INIT})
+#target_link_libraries(libwebster ${CMAKE_THREAD_LIBS_INIT})
 set_target_properties(libwebster PROPERTIES
     OUTPUT_NAME "webster"
     VERSION "${WEBSTER_MAJOR_VERSION}.${WEBSTER_MINOR_VERSION}.${WEBSTER_PATCH_VERSION}"
